# ARC_cache

./: .gitignore  CMakeLists.txt  README.md  bash.sh  cache.cpp  cache.h  cache_ARC.hpp  cache_Beladi.hpp  cache_Belady.hpp  main.cpp  runtest.sh
Tests/: test1.in  test2.in  test3.in
flags/: CMakeLists.txt
include/: cache_ARC.hpp  cache_Belady.hpp
source/: main.cpp
